[project]
name = "vmcrawl"
version = "0.9"
description = "Mastodon-focused version reporting crawler"
requires-python = ">=3.13"

dependencies = [
    "psycopg[binary]",
    "psycopg-pool",
    "httpx[http2]",
    "python-dotenv",
    "toml",
    "packaging",
    "tqdm",
    "fastapi",
    "uvicorn[standard]",
]

[tool.setuptools]
py-modules = [
    "crawler",
    "api",
]
