[project]
name = "vmcrawl"
version = "0.15.0"
description = "Mastodon-focused version reporting crawler"
requires-python = ">=3.13"

dependencies = [
    "psycopg[binary]",
    "psycopg-pool",
    "httpx[http2]",
    "python-dotenv",
    "toml",
    "packaging",
    "tqdm",
    "fastapi",
    "uvicorn[standard]",
    "cachetools",
    "paramiko",
]

[tool.setuptools]
py-modules = [
    "crawler",
    "api",
]

[dependency-groups]
dev = [
    "types-cachetools>=6.2.0.20251022",
]

[tool.pyright]
include = ["*.py"]
typeCheckingMode = "standard"
